fix: horizontal scroll bars should not be present on pages, scroll ghosts should not be present on comment list

--- a/client/src/components/CommentList/style.css
+++ b/client/src/components/CommentList/style.css
@@ -4,7 +4,6 @@ padding-left: 10px;
 }
 
 .comment-scroll-container {
-  overflow: scroll;
   padding: 20px;
   padding-top: 0;
   display: flex;
