--- a/client/src/pages/LandingPage/style.css
+++ b/client/src/pages/LandingPage/style.css
@@ -1,7 +1,5 @@
 .landing-page {
   background-color: var(--bg-primary-dark);
-  width: 100vw;
-  min-height: 100vh;
   padding: 100px 0 50px 0;
 }
 
