--- a/client/src/pages/Profile/style.css
+++ b/client/src/pages/Profile/style.css
@@ -1,7 +1,5 @@
 .profile-page {
   background-color: var(--bg-primary-dark);
-  width: 100vw;
-  min-height: 100vh;
   padding-top: 100px;
 }
 
