--- a/client/src/pages/SignInPage/style.css
+++ b/client/src/pages/SignInPage/style.css
@@ -1,5 +1,5 @@
 .signup-page {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: var(--bg-primary-dark);
   display: flex;
