--- a/client/src/pages/UploadPage/style.css
+++ b/client/src/pages/UploadPage/style.css
@@ -1,6 +1,6 @@
 .upload-page {
   background-color: var(--bg-primary-dark);
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   align-items: center;
   justify-content: center;
