--- a/client/src/pages/ViewPost/style.css
+++ b/client/src/pages/ViewPost/style.css
@@ -1,6 +1,5 @@
 .view-post-page {
   background-color: var(--bg-primary-dark);
-  width: 100vw;
   min-height: 100vh;
   padding-top: 120px;
   padding-bottom: 20px;
